--- a/API/Web.config
+++ b/API/Web.config
@@ -22,7 +22,7 @@
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferC:\Users\roman\OneDrive\documents\visual studio 2017\Projects\SberDat\API\Web.configRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
@@ -69,6 +69,11 @@
          "Data Source=q.benefitcz.cz,50698; 
          Initial Catalog=student3;
          User id=STUDENT3;
-         Password=St3Ben07mk;" />
+         Password=St3Ben07mk;" /> 
+    <!--<add name="Database" connectionString= 
+         "Data Source=dev\expr2012; 
+         Initial Catalog=student3;
+         User id=STUDENT3;
+         Password=St3Ben07mk;" />-->
   </connectionStrings>
 </configuration>
