--- a/SberDat/Web.config
+++ b/SberDat/Web.config
@@ -16,12 +16,12 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
-    <!--
+   <!--
     <customErrors mode="On" defaultRedirect="~/Error/Generic">
       <error statusCode="404" redirect="~/Error/NotFound" />
     </customErrors>
-        -->
-  </system.web>
+    -->
+    </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -64,10 +64,15 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="Database" connectionString= 
+   <add name="Database" connectionString= 
          "Data Source=q.benefitcz.cz,50698; 
          Initial Catalog=student3;
          User id=STUDENT3;
          Password=St3Ben07mk;" />
+    <!--<add name="Database" connectionString= 
+         "Data Source=dev\expr2012; 
+         Initial Catalog=student3;
+         User id=STUDENT3;
+         Password=St3Ben07mk;" />-->
   </connectionStrings>
 </configuration>
